test/compile_errors/err_todo_named_argument.w
//! expect-check-fail: todo() does not accept named arguments

fn main:
    todo(msg: "named")
